Rename navItems->items, collapsed->overflowed, fixed->collapsed

--- a/sass/px-app-nav-item.scss
+++ b/sass/px-app-nav-item.scss
@@ -91,26 +91,26 @@ $px-app-nav-item-stripe-color--selected: var(--px-app-nav-item-stripe-color--sel
   background-color: $px-app-nav-item-stripe-color--selected;
 }
 
+/* Item State: Selected+Overflowed */
+$px-app-nav-item-icon-color--overflowed: var(--px-app-nav-item-icon-color--overflowed, $white);
+$px-app-nav-item-text-color--overflowed: var(--px-app-nav-item-text-color--overflowed, $white);
+$px-app-nav-item-background-color--overflowed: var(--px-app-nav-item-background-color--overflowed, $select-default);
+:host([selected][overflowed]) {
+  color: $px-app-nav-item-text-color--overflowed;
+  background-color: $px-app-nav-item-background-color--overflowed;
+  --iron-icon-fill-color: $px-app-nav-item-icon-color--overflowed;
+}
+
 /* Item State: Selected+Collapsed */
-$px-app-nav-item-icon-color--collapsed: var(--px-app-nav-item-icon-color--collapsed, $white);
-$px-app-nav-item-text-color--collapsed: var(--px-app-nav-item-text-color--collapsed, $white);
-$px-app-nav-item-background-color--collapsed: var(--px-app-nav-item-background-color--collapsed, $select-default);
+$px-app-nav-item-icon-color--collapsed: var(--px-app-nav-item-icon-color--collapsed, $gray15);
+$px-app-nav-item-text-color--collapsed: var(--px-app-nav-item-text-color--collapsed, $gray15);
+$px-app-nav-item-background-color--collapsed: var(--px-app-nav-item-background-color--collapsed, $white);
 :host([selected][collapsed]) {
   color: $px-app-nav-item-text-color--collapsed;
   background-color: $px-app-nav-item-background-color--collapsed;
   --iron-icon-fill-color: $px-app-nav-item-icon-color--collapsed;
 }
-
-/* Item State: Selected+Fixed */
-$px-app-nav-item-icon-color--fixed: var(--px-app-nav-item-icon-color--fixed, $gray15);
-$px-app-nav-item-text-color--fixed: var(--px-app-nav-item-text-color--fixed, $gray15);
-$px-app-nav-item-background-color--fixed: var(--px-app-nav-item-background-color--fixed, $white);
-:host([selected][fixed]) {
-  color: $px-app-nav-item-text-color--fixed;
-  background-color: $px-app-nav-item-background-color--fixed;
-  --iron-icon-fill-color: $px-app-nav-item-icon-color--fixed;
-}
-:host([selected][fixed]):before {
+:host([selected][collapsed]):before {
   top: 0;
   left: 0;
   bottom: 0;
@@ -149,23 +149,23 @@ $px-app-nav-subitem-background-color--selected: var(--px-app-nav-subitem-backgro
   display: none;
 }
 
-/* Subitem State: Fixed */
-$px-app-nav-subitem-text-color--fixed: var(--px-app-nav-subitem-text-color--fixed, $gray15);
-:host([subitem][fixed]) {
-  color: $px-app-nav-subitem-text-color--fixed;
+/* Subitem State: Collapsed */
+$px-app-nav-subitem-text-color--collapsed: var(--px-app-nav-subitem-text-color--collapsed, $gray15);
+:host([subitem][collapsed]) {
+  color: $px-app-nav-subitem-text-color--collapsed;
   background-color: $gray2;
   padding-left: rem(55px);
 }
-:host([subitem][fixed]:hover) {
+:host([subitem][collapsed]:hover) {
   background-color: $gray4;
 }
 
-/* Subitem State: Fixed+Parent Selected+NOT selected */
-:host([subitem][fixed][parent-selected]) {
+/* Subitem State: Collapsed+Parent Selected+NOT selected */
+:host([subitem][collapsed][parent-selected]) {
   color: $gray15;
   background-color: $white;
 }
-:host([subitem][fixed][parent-selected]):before {
+:host([subitem][collapsed][parent-selected]):before {
   content: '';
   display: block;
   background-color: $white;
@@ -177,16 +177,16 @@ $px-app-nav-subitem-text-color--fixed: var(--px-app-nav-subitem-text-color--fixe
   height: 100%;
   background-color: $select-default;
 }
-:host([subitem][fixed][parent-selected]:hover) {
+:host([subitem][collapsed][parent-selected]:hover) {
   background-color: $gray1;
 }
 
-/* Subitem State: Fixed+Parent Selected+Selected */
-:host([subitem][fixed][parent-selected][selected]) {
+/* Subitem State: Collapsed+Parent Selected+Selected */
+:host([subitem][collapsed][parent-selected][selected]) {
   color: $white;
   background-color: $select-default;
 }
-:host([subitem][fixed][parent-selected][selected]:hover) {
+:host([subitem][collapsed][parent-selected][selected]:hover) {
   color: $white;
   background-color: $select-default;
 }
@@ -198,7 +198,7 @@ $px-app-nav-subitem-text-color--fixed: var(--px-app-nav-subitem-text-color--fixe
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-:host([collapsed]) .app-nav-item__label {
+:host([overflowed]) .app-nav-item__label {
   flex: 1;
 }
 
